tests/array/good/concatenation.catala_en
## Unit testing for list of concatenation.

```catala
declaration scope A:
   output x content list of integer
   output y content list of integer

scope A:
   definition x equals [0; 1; 2] ++ [3; 4; 5; 6]
   definition y equals x ++ ([7; 8; 9] ++ [10])
```



```catala-test-inline
$ catala Typecheck --check-invariants
┌─[RESULT]─
│All invariant checks passed
└─
┌─[RESULT]─
│Typechecking successful!
└─
```

```catala-test-inline
$ catala test-scope A
┌─[RESULT]─
│Computation successful! Results:
│x = [0; 1; 2; 3; 4; 5; 6]
│y = [0; 1; 2; 3; 4; 5; 6; 7; 8; 9; 10]
└─
```
